Añadidos botones para cambiar el color, falta revisar el código del loop

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
 <body onload="inicializa();">
 	<script type="text/javascript" src="js/script.js"></script>
 
-	<canvas id="pantalla">
+	<canvas id="pantalla"></canvas>
 		
-	</canvas>
+	<br>
+
+<button id="rojo" onclick="negroArojo()">Rojo</button>
+<button id="azul" onclick="negroAazul()">Azul</button>
+<button id="verde" onclick="negroAverde()">Verde</button>
+
 </body>
 </html>
